--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "input_data": {
-    "path": "input_data/Sharpe-ratio-picked-instruments-data.csv"
+    "path": "input_data/Sharpe-ratio-picked-instruments-more-data.xlsx"
   },
   "output": {
     "xlsx": "XLSX files",
@@ -8,6 +8,6 @@
   },
   "plotting": {
     "style": "seaborn",
-    "figure_size": [8, 12]
+    "figure_size": [24, 12]
   }
 }
